fixed new course alignment

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the Courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.new_container {
+    margin-top: 20%;
+}
+
 .course_box { 
     border: 1px solid #eaeaea;
     margin: 8px;
@@ -34,4 +38,8 @@
 
 .clock_container {
     margin-top: 5px;
+}
+
+#course_country_code {
+    width: 100%;
 }
